refactored json parsing